--- a/Web_part/Web_template/main.html
+++ b/Web_part/Web_template/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Microscope Size Calculator</title>
-    <link rel="stylesheet" href="../Web_template/Static/styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
 </head>
 <body>
     <div class="container">
